static/psi4manual/1.1.0/_sources/autodir_options_c/module__detci.rst.txt
.. _`apdx:detci`:


DETCI
=====

Performs configuration interaction (CI) computations of various types, including restricted-active-space (RAS) CI, full CI, the CI component of multi-configuration self-consistent-field (MCSCF) and complete-active-space self-consistent-field (CASSCF) computations, and arbitrary-order perturbation theory and arbitrary-order coupled-cluster computations for small molecules.

.. toctree::
   :hidden:
   :glob:

   detci__*


General Options 
_______________

.. include:: detci__avg_states.rst
.. include:: detci__avg_weights.rst
.. include:: detci__a_ras3_max.rst
.. include:: detci__b_ras3_max.rst
.. include:: detci__calc_s_squared.rst
.. include:: detci__ciblks_print.rst
.. include:: detci__ci_maxiter.rst
.. include:: detci__detci_freeze_core.rst
.. include:: detci__ex_level.rst
.. include:: detci__e_convergence.rst
.. include:: detci__fci.rst
.. include:: detci__icore.rst
.. include:: detci__istop.rst
.. include:: detci__ms0.rst
.. include:: detci__num_dets_print.rst
.. include:: detci__num_roots.rst
.. include:: detci__ras34_max.rst
.. include:: detci__ras3_max.rst
.. include:: detci__ras4_max.rst
.. include:: detci__reference.rst
.. include:: detci__r_convergence.rst
.. include:: detci__s.rst
.. include:: detci__val_ex_level.rst

Diagonalization Methods 
_______________________

.. include:: detci__diag_method.rst
.. include:: detci__lse.rst
.. include:: detci__lse_collapse.rst
.. include:: detci__lse_tolerance.rst
.. include:: detci__preconditioner.rst
.. include:: detci__update.rst

Density Matrices 
________________

.. include:: detci__dipmom.rst
.. include:: detci__nat_orbs.rst
.. include:: detci__opdm.rst
.. include:: detci__tdm.rst

Root Following 
______________

.. include:: detci__follow_root.rst

Guess Vectors 
_____________

.. include:: detci__restart.rst

File Handling 
_____________

.. include:: detci__collapse_size.rst
.. include:: detci__max_num_vecs.rst

General-Order Perturbation Theory 
_________________________________

.. include:: detci__mpn.rst

General-Order Coupled-Cluster 
_____________________________

.. include:: detci__cc.rst
.. include:: detci__cc_a_ras3_max.rst
.. include:: detci__cc_b_ras3_max.rst
.. include:: detci__cc_ex_level.rst
.. include:: detci__cc_ras34_max.rst
.. include:: detci__cc_ras3_max.rst
.. include:: detci__cc_ras4_max.rst
.. include:: detci__cc_val_ex_level.rst
.. include:: detci__cc_vecs_read.rst
.. include:: detci__cc_vecs_write.rst
.. include:: detci__diis.rst
.. include:: detci__diis_freq.rst
.. include:: detci__diis_max_vecs.rst
.. include:: detci__diis_min_vecs.rst
.. include:: detci__diis_start_iter.rst
.. include:: detci__num_amps_print.rst

MCSCF 
_____

.. include:: detci__df_basis_mcscf.rst
.. include:: detci__mcscf_algorithm.rst
.. include:: detci__mcscf_diis_error_type.rst
.. include:: detci__mcscf_diis_freq.rst
.. include:: detci__mcscf_diis_max_vecs.rst
.. include:: detci__mcscf_diis_start.rst
.. include:: detci__mcscf_e_convergence.rst
.. include:: detci__mcscf_guess.rst
.. include:: detci__mcscf_maxiter.rst
.. include:: detci__mcscf_max_rot.rst
.. include:: detci__mcscf_rotate.rst
.. include:: detci__mcscf_r_convergence.rst
.. include:: detci__mcscf_so_start_e.rst
.. include:: detci__mcscf_so_start_grad.rst
.. include:: detci__mcscf_type.rst


*Expert* General Options 
________________________

.. include:: detci__ci_num_threads.rst
.. include:: detci__ex_allow.rst
.. include:: detci__mixed.rst
.. include:: detci__mixed4.rst
.. include:: detci__r4s.rst
.. include:: detci__sf_restrict.rst
.. include:: detci__sigma_overlap.rst
.. include:: detci__wfn.rst

*Expert* Diagonalization Methods 
________________________________

.. include:: detci__h0_blocksize.rst
.. include:: detci__h0_block_coupling.rst
.. include:: detci__h0_block_coupling_size.rst
.. include:: detci__h0_guess_size.rst
.. include:: detci__hd_avg.rst

*Expert* Density Matrices 
_________________________

.. include:: detci__tpdm.rst

*Expert* Root Following 
_______________________

.. include:: detci__follow_vector.rst

*Expert* Guess Vectors 
______________________

.. include:: detci__ci_file_start.rst
.. include:: detci__filter_guess.rst
.. include:: detci__filter_guess_det1.rst
.. include:: detci__filter_guess_det2.rst
.. include:: detci__filter_guess_sign.rst
.. include:: detci__filter_zero_det.rst
.. include:: detci__guess_vector.rst
.. include:: detci__num_init_vecs.rst
.. include:: detci__reference_sym.rst

*Expert* File Handling 
______________________

.. include:: detci__hd_otf.rst
.. include:: detci__no_dfile.rst

*Expert* General-Order Perturbation Theory 
__________________________________________

.. include:: detci__mpn_order_save.rst
.. include:: detci__mpn_schmidt.rst
.. include:: detci__mpn_wigner.rst
.. include:: detci__perturb_magnitude.rst

*Expert* General-Order Coupled-Cluster 
______________________________________

.. include:: detci__cc_fix_external.rst
.. include:: detci__cc_fix_external_min.rst
.. include:: detci__cc_macro.rst
.. include:: detci__cc_mixed.rst
.. include:: detci__cc_update_eps.rst
.. include:: detci__cc_variational.rst

*Expert* Alternative Algorithms 
_______________________________

.. include:: detci__bendazzoli.rst
.. include:: detci__fci_strings.rst
.. include:: detci__repl_otf.rst

